# dcwinpwn

./: README.md  pyproject.toml
api/: graph.py  main.py  snapshot.py
bridge/: linwinpwn_runner.py
configs/: default.yaml
core/: config.py  proc.py  queue.py  types.py
core/modules/: adcs_enum.py  base.py  ftp_enum.py  kerberos_enum.py  ldap_enum.py  mysql_enum.py  smb_enum.py  ssh_enum.py  winrm_enum.py
discovery/: parsers.py  run.py
discovery/nse/: ad_dc_detect.py
scripts/: bootstrap.sh  install_deps.sh  package.sh
ui/src/: App.tsx
ui/src/components/: PathFinder.tsx  Toolbar.tsx
web/gojs/: index.html
